Release Notes - PHPJasper - Version 2.6
========================================================
** Update
    * updated for jasperstarter 3.2.1
________________________________________________________
Release Notes - PHPJasper - Version 2.5
========================================================
* https://github.com/PHPJasper/phpjasper/pull/77
* https://github.com/PHPJasper/phpjasper/pull/78
* https://github.com/PHPJasper/phpjasper/pull/79
* https://github.com/PHPJasper/phpjasper/pull/80
________________________________________________________

Release Notes - PHPJasper - Version 2.2
========================================================
** Improvement: https://github.com/PHPJasper/phpjasper/issues/30
    * add support for resource option
________________________________________________________

Release Notes - PHPJasper - Version 2.1
========================================================
** Refactoring
    * strict types activate
    * add type declarations
________________________________________________________
Release Notes - PHPJasper - Version 2.0
========================================================
** Improvement
    * Support php 7.1 above
________________________________________________________

Release Notes - PHPJasper - Version 1.15
========================================================
** Improvement
    * Updated JasperStarter to Version 3.1.0
________________________________________________________

Release Notes - JasperStarter - Version 3.1.0
========================================================

** New Feature
    * [JAS-83] - JSON file as a data source

** Task
    * [JAS-95] - Include JasperReports 6.4.0

** Improvement
    * [JAS-84] - How to pass $P{XML_DATA_DOCUMENT} to sub report - additional documentation
________________________________________________________