@@ -138,10 +138,10 @@ class PHPJasper
             foreach ($options['db_connection'] as $key => $value) {
                 $this->command .= " {$mapDbParams[$key]} {$value}";
             }
+        }
 
-            if ($options['resources']) {
-                $this->command .= " -r {$options['resources']}";
-            }
+        if ($options['resources']) {
+            $this->command .= " -r {$options['resources']}";
         }
 
         return $this;
